Fix footer author link and mobile language button alignment

--- a/themes/yorukumo/source/css/_partial/header.styl
+++ b/themes/yorukumo/source/css/_partial/header.styl
@@ -282,7 +282,7 @@
     height auto
     flex-direction column
     gap 0.75rem
-    padding 3rem 2rem
+    padding 3rem 2rem 0.75rem 2rem
 
     li
       width 100%
@@ -336,9 +336,13 @@
   // 移动端语言按钮与导航项保持一致
   .lang-switcher
     width 100%
-    padding 0.75rem 2rem
+    display block
+    padding 0 2rem 0.75rem 2rem
 
   .lang-btn
+    display flex
+    align-items center
+    justify-content center
     width 100%
     font-size 1.25rem
     font-weight 600
